aprendendo como acessar elemento por id  ou pela class

--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>teste</title>
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <div class="container">
-        <h1 id="meuTexto">Hello World</h1>
+        <h1 class="txtName" >Hello World 1</h1>
+        <h1 >Hello World 2</h1>
+        <h1 class="txtName">Hello World 3</h1>
     </div>
+
+
+
 </body>
 </html>
-
-<script>
-    document.getElementById("meuTexto").innerHTML = "Mudei o Texto!";
-</script>
+<script src="index.js"></script>
