aprendendo sobre eventos em js

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>teste</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-<body>
+<body onload="acionaOnload()">
     <div class="container">
-        <h1 id="primeiroHello" >Hello World 1</h1>
-        <h1 >Hello World 2</h1>
-        <h1 class="txtName">Hello World 3</h1>
+        <h1 id="primeiroHello" >Testando Eventos em JS</h1>
+        <h1 >Testando Eventos em JS</h1>
+        <h1 class="txtName">Testando Eventos em JS</h1>
     </div>
 
 
