eventos em javascript, onload, onchange, onmouseover, onmouseout, onclick

--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
         <h1 class="txtName">Testando Eventos em JS</h1>
     </div>
 
+    <form action="">
+        <label for="nome">Insira o seu nome:</label>
+        <input type="text" name="nome" id="nome" onchange="acionaOnchange()">
+    </form>
+<div class="box" id="box" onmouseover="mudaCorBox('box', '#d35400')"
+onmouseout="mudaCorBoxOut('box', '#d99999')">
 
+</div>
+    <button Onclick="acionaOnClick()">Aciona Onclick</button>
 
 </body>
 </html>
